# REED-inscript

./: .env  .gitignore  .renderignore  Dockerfile  README.md  app.py  build.sh  config.py  database.py  gunicorn.conf.py  init_db.py  keep_alive.py  license_server.py  pyproject.toml  render-blueprint.yaml  render.yaml  requirements.txt  setup.py  setup.sh  start.sh
backend/: requirements.txt  start.sh
backend/app/: auth.py  database.py  initial_data.py  main.py  models.py
backend/app/routers/: logs.py  machines.py  users.py
data/: admin_pharma.db
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
frontend/src/pages/: Dashboard.jsx  Login.jsx
instance/: amicale.db
static/css/: style.css
static/js/: main.js
templates/: 404.html  500.html  admin_dashboard.html  admin_login.html  base.html  email_compose.html  form.html  index.html  view_request.html
