[tool.poetry]
name = "student-amicale-app"
version = "1.0.0"
description = "Application de gestion des demandes d'adhésion à l'Amicale des Étudiants"
authors = ["Votre Nom <votre@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.3.3"
Flask-SQLAlchemy = "3.0.5"
Flask-Login = "0.6.2"
Flask-Mail = "0.9.1"
email-validator = "2.0.0"
reportlab = "4.0.4"
python-dotenv = "1.0.0"
WTForms = "3.0.1"
Flask-WTF = "1.1.1"
Pillow = "9.5.0"
gunicorn = "20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"